tests/expectations/compiler/tuple/function_return_single_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370029]: A tuple expression must have at least two elements.
    --> compiler-test:9:16
     |
   9 |         return (b,);
     |                ^^^^"""]
